Prevents glossy effect on select inputs on Safari

--- a/src/app.css
+++ b/src/app.css
@@ -62,6 +62,10 @@
 		@apply cursor-pointer;
 	}
 
+	select {
+		-webkit-appearance: none;
+	}
+
 	button {
 		@apply button;
 	}
